# CMakeLists.txt --- CMake project settings
##############################################################################

# CMake minimum version
cmake_minimum_required(VERSION 3.5)

# project name and languages
project(QStringTest CXX)

# QStringTest.exe
add_executable(QStringTest QStringTest.cpp)

##############################################################################
